<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环控助手</string>
    <string name="LoginTittle">请登录</string>
    <string name="LoginSucTip"></string>
    <string name="LoginId">帐号：</string>
    <string name="LoginPsw">密码：</string>
    <string name="cbRemember">记住密码</string>
    <string name="btnLogin">登录</string>
    <string name="btnReg">后门</string>
    <string name="exit">退出</string>
    <string name="logout">注销</string>
    <string name="btnQue">查询</string>
    <string name="btnCtr">控制</string>
    <string name="btnSet">配置</string>
    <string name="btnHis">历史</string>
    <string name="equip_tem">空调设备</string>
    <string name="equip_sun">卷帘设备</string>
    <string name="equip_wind">风机设备</string>
    <string name="equip_wet">灌溉设备</string>
    <string name="set_tem">预设温度值</string>
    <string name="set_wet">预设湿度值</string>
    <string name="set_sun">预设光照值</string>
    <string name="set_wind">预设CO2值</string>
    <string name="tit1">环境数据</string>
    <string name="tit2">大棚作物</string>
    <string name="titSun">光照值 （lux）</string>
    <string name="titTemIn">室内温度（℃）</string>
    <string name="titWet">湿度 （%）</string>
    <string name="titTemOut">室外温度（℃）</string>
    <string name="titCO2">CO2浓度（%）</string>
    <string name="titId">作物id</string>
    <string name="titCode">作物编码</string>
    <string name="titName">作物名</string>
    
    <string name="emptyNum">0</string>
    <string name="empty"></string>
    <string name="btnRefresh"></string>
    <string name="save"></string>
    <string name="action_settings">Settings</string>

</resources>