<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_weight="0.59"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
                android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_greenhouse"
                 style="@style/spin" />

            <Button
                android:id="@+id/refresh_greenhouse"
                style="@style/button_fresh"/>
            <Button
                android:id="@+id/save"
                style="@style/button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_save"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                     
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/set_tem"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/set_tem"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                     android:gravity="center"
                    android:inputType="text"
                    android:singleLine="true" />
                <TextView
                    style="@style/text"
                    android:layout_width="46dp"
                     android:layout_marginLeft="10dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="℃"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_gravity="center"
             android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/set_wet"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/set_wet"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                     android:gravity="center"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
                  <TextView
                    style="@style/text"
                    android:layout_width="46dp"
                     android:layout_marginLeft="10dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="％"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_gravity="center"
             android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/set_sun"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/set_sun"
                   android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                     android:gravity="center"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
                  <TextView
                    style="@style/text"
                    android:layout_width="46dp"
                     android:layout_marginLeft="10dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="lux"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_gravity="center"
             android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                     
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/set_wind"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/set_wind"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                     android:gravity="center"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
                  <TextView
                    style="@style/text"
                    android:layout_width="46dp"
                     android:layout_marginLeft="10dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="％"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnQue"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnQue" />

        <Button
            android:id="@+id/btnCtr"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnCtr" />

        <Button
            android:id="@+id/btnSet"
            style="@style/button_choose"
            android:layout_weight="1"
            android:text="@string/btnSet" />

        <Button
            android:id="@+id/btnHis"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnHis" />
    </LinearLayout>

</LinearLayout>