<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_weight="0.59"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_greenhouse"
                style="@style/spin" />

            <Button
                android:id="@+id/refresh_greenhouse"
                style="@style/button_fresh" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/equip_tem"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vaule1"
                        style="@style/vaule" />

                    <SeekBar
                        android:id="@+id/SeekBar1"
                        style="@style/MySeekBar" >
                    </SeekBar>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/equip_sun"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vaule2"
                        style="@style/vaule" />

                    <SeekBar
                        android:id="@+id/SeekBar2"
                        style="@style/MySeekBar" >
                    </SeekBar>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/equip_wind"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vaule3"
                        style="@style/vaule" />

                    <SeekBar
                        android:id="@+id/SeekBar3"
                        style="@style/MySeekBar" >
                    </SeekBar>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/equip_wet"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vaule4"
                        style="@style/vaule" />

                    <SeekBar
                        android:id="@+id/SeekBar4"
                        style="@style/MySeekBar" >
                    </SeekBar>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnQue"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnQue" />

        <Button
            android:id="@+id/btnCtr"
            style="@style/button_choose"
            android:layout_weight="1"
            android:text="@string/btnCtr" />

        <Button
            android:id="@+id/btnSet"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnSet" />

        <Button
            android:id="@+id/btnHis"
            style="@style/button_unchoose"
            android:layout_weight="1"
            android:text="@string/btnHis" />
    </LinearLayout>

</LinearLayout>